--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -1350,23 +1350,6 @@
 			  </child>
 
 			  <child>
-			    <widget class="GtkButton" id="button11">
-			      <property name="width_request">456</property>
-			      <property name="height_request">24</property>
-			      <property name="visible">True</property>
-			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">History löschen</property>
-			      <property name="use_underline">True</property>
-			      <property name="relief">GTK_RELIEF_NORMAL</property>
-			      <property name="focus_on_click">True</property>
-			    </widget>
-			    <packing>
-			      <property name="x">0</property>
-			      <property name="y">40</property>
-			    </packing>
-			  </child>
-
-			  <child>
 			    <widget class="GtkLabel" id="label49">
 			      <property name="width_request">64</property>
 			      <property name="height_request">24</property>
@@ -1417,13 +1400,30 @@
 			      <property name="y">8</property>
 			    </packing>
 			  </child>
+
+			  <child>
+			    <widget class="GtkButton" id="button_options_recentlist_history">
+			      <property name="width_request">456</property>
+			      <property name="height_request">24</property>
+			      <property name="visible">True</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">History löschen</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="focus_on_click">True</property>
+			    </widget>
+			    <packing>
+			      <property name="x">0</property>
+			      <property name="y">40</property>
+			    </packing>
+			  </child>
 			</widget>
 		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkCheckButton" id="checkbutton1">
+		    <widget class="GtkCheckButton" id="cb_options_recentlist">
 		      <property name="visible">True</property>
 		      <property name="can_default">True</property>
 		      <property name="has_default">True</property>
@@ -1434,6 +1434,7 @@
 		      <property name="active">True</property>
 		      <property name="inconsistent">False</property>
 		      <property name="draw_indicator">True</property>
+		      <signal name="toggled" handler="bb_button_options_history" last_modification_time="Sun, 28 May 2006 09:12:55 GMT"/>
 		    </widget>
 		    <packing>
 		      <property name="type">label_item</property>
@@ -1524,24 +1525,6 @@
 			  </child>
 
 			  <child>
-			    <widget class="GtkFileChooserButton" id="fb_options_load">
-			      <property name="width_request">344</property>
-			      <property name="height_request">32</property>
-			      <property name="visible">True</property>
-			      <property name="title" translatable="yes">Ordner auswählen</property>
-			      <property name="action">GTK_FILE_CHOOSER_ACTION_SELECT_FOLDER</property>
-			      <property name="local_only">True</property>
-			      <property name="show_hidden">False</property>
-			      <property name="do_overwrite_confirmation">False</property>
-			      <property name="width_chars">-1</property>
-			    </widget>
-			    <packing>
-			      <property name="x">112</property>
-			      <property name="y">8</property>
-			    </packing>
-			  </child>
-
-			  <child>
 			    <widget class="GtkFileChooserButton" id="fb_options_save">
 			      <property name="width_request">344</property>
 			      <property name="height_request">32</property>
@@ -1556,6 +1539,24 @@
 			    <packing>
 			      <property name="x">112</property>
 			      <property name="y">48</property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkFileChooserButton" id="fb_options_load">
+			      <property name="width_request">344</property>
+			      <property name="height_request">32</property>
+			      <property name="visible">True</property>
+			      <property name="title" translatable="yes">Ordner auswählen</property>
+			      <property name="action">GTK_FILE_CHOOSER_ACTION_SELECT_FOLDER</property>
+			      <property name="local_only">True</property>
+			      <property name="show_hidden">False</property>
+			      <property name="do_overwrite_confirmation">False</property>
+			      <property name="width_chars">-1</property>
+			    </widget>
+			    <packing>
+			      <property name="x">112</property>
+			      <property name="y">8</property>
 			    </packing>
 			  </child>
 			</widget>
